--- a/src/Components/LineButtonMain/LineButtonMain.scss
+++ b/src/Components/LineButtonMain/LineButtonMain.scss
@@ -23,10 +23,3 @@
     }
   }
 }
-
-@media (max-width: 650px) {
-  .line-button button {
-    white-space: nowrap;
-    width: 100%;
-  }
-}
