--- a/src/Style/indexpage.scss
+++ b/src/Style/indexpage.scss
@@ -1,5 +1,10 @@
 @import "../Style/style.scss";
 
+.index-page {
+  height: 100vh;
+  margin-top: calc(100vh * 0.1);
+}
+
 .green-active {
   display: flex;
   align-items: flex-start;
@@ -8,25 +13,29 @@
 .hero {
   display: flex;
   align-items: center;
-  width: 100%;
+  // width: 100%;
+  width: calc(100% / 2 - 20px);
   justify-content: space-between;
-  position: absolute;
-  top: 45%;
-  right: 50%;
-  transform: translate(50%, -50%);
+  // position: absolute;
+  // top: 50%;
+  // // right: 50%;
+  // transform: translate(50%, -50%);
+  gap: 20px;
 
   &-image {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    margin-top: 54px;
   }
 
-  &-picture {
-    width: 70%;
-  }
+  // &-picture {
+  //   width: auto;
+  // }
   &-socials {
     margin-top: 40px;
     z-index: 100;
+    text-align: center;
     & > a {
       margin-right: 30px;
       fill: $fontColor;
@@ -63,9 +72,9 @@ svg:hover {
     &-image {
       width: 100%;
     }
-    &-picture {
-      width: 100%;
-    }
+    // &-picture {
+    //   width: 100%;
+    // }
     &-socials {
       margin-top: 30px;
       width: 100%;
